--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,25 @@
   </head>
   <body>
     <h1>Hellow Sockets</h1>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+      socket.on('connect', function() {
+        console.log('client socket connection established');
+      });
+
+      // socket.emit('createMessage', {
+      //   sender: 'client',
+      //   message: 'hellow there ,, any body here'
+      // });
+      socket.on('newMessage', function(newMessage){
+        console.log(newMessage);
+      });
+
+      socket.on('disconnect', function() {
+        console.log('client socket connection cancelled');
+      });
+    </script>
   </body>
 </html>
